# 06-crm

./: .rustfmt.toml  Cargo.toml  _typos.toml  deny.toml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml  build.rs
crm-metadata/src/: lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml  build.rs
crm-send/src/: lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: notification.rs
crm-send/tests/: service.rs
crm/src/: client.rs  config.rs  lib.rs  server.rs
crm/src/abi/: auth.rs  crm.rs  mod.rs
crm/src/pb/: crm.rs
fixtures/: key.pem  nginx.conf
protos/: crm.proto
protos/crm/: messages.proto  rpc.proto
protos/metadata/: messages.proto  rpc.proto
protos/notification/: messages.proto  rpc.proto
protos/user-stats/: messages.proto  rpc.proto
user-stat/: .env  Cargo.toml  build.rs  user_stat.yml
user-stat/examples/: gen.rs
user-stat/migrations/: 20240722032426_init.sql
user-stat/src/: lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: user_stats.rs
user-stat/tests/: service.rs
