[workspace]
members = ["crm", "user-stat"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.86"
prost = "0.13.1"
prost-build = "0.13.1"
prost-types = "0.13.1"
tokio = { version = "1.38.1", features = ["rt-multi-thread", "rt", "macros"] }
tonic = { version = "0.12.1", features = ["tls", "zstd"] }
tonic-build = "0.12.1"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
