[workspace]
members = ["crm", "crm-metadata", "crm-send", "user-stat"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.86"
prost = "0.13.1"
prost-build = "0.13.1"
prost-types = "0.13.1"
tokio = { version = "1.38.1", features = ["rt-multi-thread", "rt", "macros"] }
tonic = { version = "0.12.1", features = ["tls", "zstd"] }
tonic-build = "0.11.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_yaml = "0.9.33"
derive_builder = "0.20.0"
futures = "0.3.30"
itertools = "0.13.0"
proto-builder-trait = "0.6.1"
rand = "0.8.5"
tokio-stream = "0.1.15"
crm-metadata={path="crm-metadata"}
crm-send={path="crm-send"}
user-stat={path="user-stat"}
