[package]
name = "crm-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
futures.workspace=true
anyhow.workspace = true
chrono.workspace = true
derive_builder.workspace = true
fake = { version = "2.9.2", features = ["chrono", "derive"] }
itertools.workspace = true
prost.workspace = true
prost-types.workspace = true
rand.workspace=true
serde.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
anyhow.workspace = true
proto-builder-trait.workspace=true
tonic-build.workspace = true

[dev-dependencies]
fake = { version = "2.9.2", features = ["chrono", "derive"] }
nanoid = "0.4.0"
